--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -6,8 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="100dp"
     android:layout_marginLeft="@dimen/spacing_medium"
-    android:layout_marginRight="@dimen/spacing_medium"
     android:layout_marginTop="@dimen/spacing_small"
+    android:layout_marginRight="@dimen/spacing_medium"
     android:layout_marginBottom="@dimen/spacing_small"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -36,6 +36,7 @@
             android:layout_height="match_parent"
             android:layout_marginLeft="@dimen/spacing_medium"
             android:layout_toRightOf="@+id/iv_story"
+            android:ellipsize="end"
             android:lineSpacingExtra="2dp"
             android:maxLines="3"
             android:padding="3dp"
