--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,7 +7,16 @@
     <dimen name="fab_margin">16dp</dimen>
 
 
-    <dimen name="spacing_medium">8dp</dimen>
     <dimen name="spacing_small">4dp</dimen>
+
+    <dimen name="spacing_xsmall">2dp</dimen>
+    <dimen name="spacing_medium">8dp</dimen>
+    <dimen name="spacing_large">16dp</dimen>
+    <dimen name="spacing_xlarge">32dp</dimen>
+
+    <dimen name="source_font_size">13sp</dimen>
+
+    <dimen name="about_text_size">16sp</dimen>
+    <dimen name="open_source_lis_text_size">14sp</dimen>
 
 </resources>
