--- a/app/src/main/res/layout/item_story.xml
+++ b/app/src/main/res/layout/item_story.xml
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v7.widget.CardView android:id="@+id/cv_item"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cv_item"
     android:layout_width="match_parent"
     android:layout_height="100dp"
-    android:layout_marginBottom="@dimen/spacing_small"
     android:layout_marginLeft="@dimen/spacing_medium"
-    android:layout_marginRight="@dimen/spacing_medium"
     android:layout_marginTop="@dimen/spacing_small"
+    android:layout_marginRight="@dimen/spacing_medium"
+    android:layout_marginBottom="@dimen/spacing_small"
     android:clickable="true"
     android:foreground="?android:attr/selectableItemBackground"
     app:cardBackgroundColor="#ffffff"
     app:cardCornerRadius="4dp"
     app:cardElevation="1dp">
-    
+
     <RelativeLayout
         android:id="@+id/rl_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="10dp">
-        
+
         <ImageView
             android:id="@+id/iv_story"
             android:layout_width="80dp"
@@ -28,7 +28,16 @@
             android:layout_alignParentLeft="true"
             android:scaleType="fitCenter"
             android:src="@mipmap/download" />
-        
+
+        <ImageView
+            android:id="@+id/iv_multi_pic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@id/iv_story"
+            android:layout_alignBottom="@id/iv_story"
+            android:src="@mipmap/multi_pic"
+            android:visibility="invisible" />
+
         <TextView
             android:id="@+id/tv_title"
             android:layout_width="match_parent"
