--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -33,7 +33,7 @@
                     android:layout_width="96dp"
                     android:layout_height="96dp"
                     android:layout_marginTop="24dp"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/logo" />
                 
                 <TextView
                     android:id="@+id/tv_version"
