--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,21 +5,22 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_camera"
-                android:icon="@drawable/ic_menu_camera"
-                android:title="Import"/>
+                android:id="@+id/nav_home"
+                android:icon="@mipmap/menu_home"
+                android:checked="true"
+                android:title="首页"/>
         <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/nav_blind_talk"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="Gallery"/>
+                android:title="瞎扯"/>
         <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/nav_big_mistake"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="Slideshow"/>
+                android:title="大误"/>
         <item
-                android:id="@+id/nav_manage"
+                android:id="@+id/nav_little_thing"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Tools"/>
+                android:title="小事"/>
     </group>
 
     <item android:title="Communicate">
