--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -66,7 +66,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:drawableLeft="@mipmap/download"
+        android:drawableLeft="@mipmap/favorites"
         android:gravity="center"
         android:text="我的收藏"
         android:textColor="@color/white"
